# konclave

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUBMISSION.md  rustfmt.toml
.design/: CLAUDE.md
.design/branding/konclave/: BRIEF.md  STATE.md  config.json
.design/branding/konclave/audit/: INDEX.md  brand-inventory.md  coherence-assessment.md  equity-analysis.md  evolution-map.md  market-fit.md
.design/branding/konclave/discover/: INDEX.md  competitive-audit.md  market-landscape.md  mood-board-direction.md  trend-analysis.md
.design/branding/konclave/patterns/: INDEX.md  STYLE.md  guidelines.html  konclave.yml
.design/branding/konclave/patterns/components/: token-mapping.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARQUITETURA.md  DIAGRAMS.md  PROOF.md  REDESENHO_FOLHA.md  ROADMAP.md  ROTA_UX.md  UX_FUNDACAO.md  UX_WIREFRAMES.md  VERTICAL_SLICE.md
docs/adr/: 0001-closed-decisions.md  0001-decisoes-fechadas.md  0002-pczt-frost-bridge.md  0003-vite-over-nextjs.md  0004-local-http-bridge.md  0004-ponte-http-local.md
engine/: README.md
konclave-signer/: Cargo.toml  README.md
konclave-signer/src/: main.rs
konclave-wasm/: Cargo.toml  README.md
konclave-wasm/js-test/: ceremony.html
konclave-wasm/src/: lib.rs
konclave-wasm/tests/vectors/: dkg_single_spend.proven.pczt  dkg_single_spend.sig1.raw  dkg_single_spend.signed.pczt  evidence_two_spend.proven.pczt  evidence_two_spend.sig0.raw  evidence_two_spend.sig1.raw  evidence_two_spend.signed.pczt
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
motor/: README.md
orchestrator/: Cargo.toml
orchestrator/examples/: simulate.rs
orchestrator/src/: address.rs  ceremony.rs  dkg.rs  inheritance.rs  lib.rs  main.rs  payroll.rs  pczt.rs  proposal.rs  relay.rs  secrets.rs  send.rs  server.rs  signer.rs  store.rs  tools.rs
orquestrador/: Cargo.toml
orquestrador/CUsersdaygo/ktarget/orquestrador/: .rustc_info.json
orquestrador/src/: ceremony.rs  dkg.rs  lib.rs  main.rs  money.rs  payroll.rs  pczt.rs  proposal.rs  secrets.rs  send.rs  server.rs  signer.rs  store.rs  tools.rs  validation.rs  wallet.rs
relay-server/: Cargo.toml  Dockerfile
relay-server/src/: main.rs
rosto/: README.md  index.html  package-lock.json  package.json  vite.config.ts
rosto/design/: DESIGN.md  prototype.html  screens-1.html  screens-2.html
rosto/src/: App.css  App.tsx  api.ts  components.tsx  format.ts  lacre.css  main.tsx  redesign.css
rosto/src/screens/: Abertura.tsx  Beneficiarios.tsx  Cerimonia.tsx  Cofres.tsx  Enviado.tsx  Membros.tsx  NovaFolha.tsx  NovoPagamento.tsx  Painel.tsx  Proposta.tsx  Propostas.tsx  Razao.tsx
scripts/: _serve.sh  konclave.ps1  verify-proof.mjs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/examples/: sign.ts
sdk/src/: index.ts
src-tauri/: README.md
tests/: README.md
ui/: .oxlintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  Layout.tsx  api.test.ts  api.ts  avatar.tsx  components.tsx  demo-vector.ts  demo.css  docs.css  format.test.ts  format.ts  inheritance.css  labels.ts  lacre.css  landing.css  main.tsx  mock.ts  net-flow.test.ts  net.css  net.ts  page.tsx  proof.css  receive.css  recovery.css  redesign.css  reveal.tsx  storage.ts  wasm-bridge.test.ts
ui/src/docs/: content.ts
ui/src/i18n/: en.ts  index.tsx  locales.test.ts  pt-BR.ts
ui/src/screens/: Ceremony.tsx  Dashboard.tsx  Demo.tsx  Docs.tsx  Inheritance.tsx  Intro.tsx  Ledger.tsx  Members.tsx  NetVault.tsx  NewPayment.tsx  NewPayroll.tsx  People.tsx  Proof.tsx  Proposal.tsx  Proposals.tsx  Receive.tsx  Recovery.tsx  Vaults.tsx  WasmSigner.tsx
ui/src/wasm-pkg/: README.md  konclave_wasm.d.ts  konclave_wasm.js  konclave_wasm_bg.wasm  konclave_wasm_bg.wasm.d.ts  package.json
