[package]
name = "konclave-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Konclave browser signer core (WS1): FROST redpallas round + Orchard action verification + ZIP-244 sig_digest, compiled to WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# FROST-redpallas signing round (proven wasm-clean: wasm-signer-spike)
reddsa = { version = "0.5.2", features = ["frost"] }
# Orchard action verification + digest surface (proven wasm-clean: wasm-orchard-probe)
orchard = { version = "0.14", default-features = false, features = ["unstable-frost"] }
# ZIP-244 sig_digest recompute (proven wasm-clean: wasm-sighash-probe)
blake2b_simd = "1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
# The confidential channel for the DKG's secret round-2 packages (Milestone 3b): seal each
# to its recipient so the blind relay carries only ciphertext. ECIES over X25519.
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
