[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
description = "Konclave Orchestrator (Layer 2): proposal state machine, validation, and orchestration of the official FROST/Zcash tools"
license = "MIT OR Apache-2.0"

# The domain core modules (money, proposal, validation) are dependency-free — pure
# std, instant builds, zero supply-chain surface. serde/serde_json are used ONLY by
# the orchestration layer (tools, wallet, signer) to parse tool output robustly.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# At-rest protection for FROST shares (security debt): AEAD via a vetted library,
# never hand-rolled crypto. XChaCha20-Poly1305 for authenticated encryption.
chacha20poly1305 = "0.10"
getrandom = "0.2"
# Key derivation for the vault passphrase ("palavra do cofre"): the word derives the
# sealing key (memory-hard Argon2id), so without it the sealed shares do not open.
argon2 = "0.5"
# Wipe secret material from memory on drop (audit M4): unsealed share plaintext, the
# derived sealing key, and cleartext configs are held in `Zeroizing` so freed memory
# does not linger with private key bytes.
zeroize = "1"
# OS keychain for the per-vault sealing key (audit C2): Windows Credential Manager /
# macOS Keychain / Linux Secret Service, behind the `KeyStore` trait. Pinned with NO
# backend feature here so the crate builds anywhere with zero system libs (the tests use
# keyring's in-memory mock); the app enables the platform-native backend per target
# (e.g. features = ["windows-native","apple-native","sync-secret-service"]).
keyring = "3"
# Local per-device state (vaults, proposals). Bundled SQLite; the sqlcipher build adds
# at-rest DB encryption (audit L2) via `Store::open_keyed` with a key from the OS keychain
# (C2). SQLCipher is a SQLite superset, so a plaintext DB still opens with plain `open` —
# encryption is opt-in and non-breaking. Vendored OpenSSL = no system lib needed (gcc only).
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
# Loopback-only HTTP bridge to the UI (ADR-0004). Blocking server, coherent with
# the synchronous core (rusqlite/subprocess) — no async runtime dragged in. Bound to
# 127.0.0.1 only: a local daemon, never a network service.
tiny_http = "0.12"
# Authoritative Zcash address validation (audit M2): a real bech32m/base58 decode with
# receiver-pool inspection before the send path, so a malformed / wrong-network /
# Sapling-only destination cannot reach the builder and lock funds (§8). Pure Rust, no
# proving. Pinned to the SAME librustzcash rev as konclave-signer for type parity across
# the repo (do not bump in isolation — see CLAUDE.md §11 / ADR-0002).
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "08334ebeddd15516385070296c6fdeb09c4620c3" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "08334ebeddd15516385070296c6fdeb09c4620c3" }

# The `konclave serve` binary (the local bridge). The library stays the tested core.
[[bin]]
name = "konclave"
path = "src/main.rs"

[dev-dependencies]
